# cheap-agent

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  bib_parser.py  cache_manager.py  config.py  latex_parser.py  llm_client.py  prompts.py  pyproject.toml  requirements.txt  server.py  test_cache_tools.py  test_diagnostics_tools.py  test_paper_tools.py  test_profile_tools.py  test_project_tools.py  test_reading_tools.py  test_review_tools.py  test_stdio.py  test_testing_tools.py  tools_cache.py  tools_code.py  tools_diagnostics.py  tools_paper.py  tools_profile.py  tools_project.py  tools_reading.py  tools_review.py  tools_testing.py  workspace.py
cheap_agent/: __init__.py  __main__.py  cache.py  cache_manager.py  config.py  llm_client.py  logging_setup.py  profiles.py  server.py  tool_registry.py  workspace.py
cheap_agent/parsers/: __init__.py  bib_parser.py  latex_parser.py
cheap_agent/prompts/: base.py  paper.py
cheap_agent/tools/: __init__.py  _common.py  cache_tools.py  code.py  diagnostics.py  experiments.py  figures.py  meta.py  paper.py  profile.py  project.py  reading.py  rebuttal.py  related_work.py  review.py  testing.py  writing.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_memory.py  test_code.py  test_diagnostics.py  test_experiments.py  test_figures.py  test_integration.py  test_meta_tools.py  test_paper.py  test_profile.py  test_profiles.py  test_project.py  test_reading.py  test_rebuttal.py  test_related_work.py  test_review.py  test_stdio.py  test_testing.py  test_tool_registry.py  test_writing.py
