[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheap-agent"
version = "0.1.0"
description = "Local MCP read-only code analysis & paper writing assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jinjisen" }]
keywords = ["mcp", "code-analysis", "academic-writing", "read-only", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0,<2",
    "python-dotenv>=1.0,<2",
    "openai>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6,<1",
]

[project.urls]
Homepage = "https://github.com/jinjisen/cheap-agent"

[tool.setuptools]
packages = ["cheap_agent", "cheap_agent.parsers", "cheap_agent.prompts", "cheap_agent.tools"]

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".code_agent_cache", "build", "dist"]

[tool.ruff.lint]
# Start lenient: catch real bugs and unused imports without churning style.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter; we don't enforce strictly
    "B008",   # function calls in defaults (FastMCP patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False style guards in tests

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Integration tests spawn the MCP server over stdio and are slow / env-dependent;
# skip them by default. Run explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end MCP stdio tests (slow, spawn server subprocess)",
]
